Added describes tag to parcel.xml files for xslt transform
git-svn-id: http://svn.osafoundation.org/chandler/trunk@1414 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/parcels/osaf/templates/parcel.xml
+++ b/chandler/parcels/osaf/templates/parcel.xml
@@ -5,7 +5,8 @@
 <!-- Copyright (c) 2003 Open Source Applications Foundation -->
 <!-- License: http://osafoundation.org/Chandler_0.1_license_terms.htm -->
 
-<Parcel itemName="templates"
+<Parcel describes="//Parcels/OSAF/templates"
+        itemName="templates"
         xmlns="//Schema/Core">
 
   <description>Document templates</description>
