Swept the entire chandler source renaming OSAF directory to osaf, and Chandler directory to chandler
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2416 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/crypto/tests/parcels/pkitest/views/parcel.xml
+++ b/chandler/crypto/tests/parcels/pkitest/views/parcel.xml
@@ -5,7 +5,7 @@
 
 <Parcel itemName="views"
         xmlns="//Schema/Core"
-        xmlns:blocks="//parcels/OSAF/framework/blocks"
+        xmlns:blocks="//parcels/osaf/framework/blocks"
         xmlns:views="//parcels/pkitest/views"
         itemClass="pkitest.PKITest.PKITestViewParcel">
 
@@ -256,7 +256,7 @@
 
     <blocks:Tree itemName="RepositoryTree">
       <!-- Attributes -->
-      <elementDelegate>OSAF.views.repositoryviewer.Repository.RepositoryDelegate</elementDelegate>
+      <elementDelegate>osaf.views.repositoryviewer.Repository.RepositoryDelegate</elementDelegate>
 
       <hideRoot>False</hideRoot>
       <noLines>False</noLines>
