- divided blockEvents into subscribeWhenVisibleEvents and subscribeAlwaysEvents. - Automatically subscribe and unsubscribe to these events.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2608 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/crypto/tests/parcels/pkitest/views/parcel.xml
+++ b/chandler/crypto/tests/parcels/pkitest/views/parcel.xml
@@ -19,9 +19,10 @@
     <childrenBlocks itemref="views:PKITestView/clientRow"/>
     <childrenBlocks itemref="views:PKITestView/sendRow"/>
     <orientationEnum>Vertical</orientationEnum>
-    <blockEvents itemref="views:StartStopServerEvent"/>
-    <blockEvents itemref="views:ConnectDisconnectClientEvent"/>
-    <blockEvents itemref="views:SendDataToServerEvent"/>
+
+    <subscribeAlwaysEvents itemref="views:StartStopServerEvent"/>
+    <subscribeAlwaysEvents itemref="views:ConnectDisconnectClientEvent"/>
+    <subscribeAlwaysEvents itemref="views:SendDataToServerEvent"/>
 
     <blocks:BoxContainer itemName="serverRow">
       <childrenBlocks itemref="views:PKITestView/StartStopServerButton"/>
