Removed the old parcel loader from repository directory
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2693 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/crypto/tests/parcels/pkitest/views/parcel.xml
+++ b/chandler/crypto/tests/parcels/pkitest/views/parcel.xml
@@ -4,7 +4,7 @@
 <!-- License: http://osafoundation.org/Chandler_0.1_license_terms.htm -->
 
 <Parcel itemName="views"
-        xmlns="//Schema/Core"
+        xmlns="http://osafoundation.org/parcels/core"
         xmlns:blocks="//parcels/osaf/framework/blocks"
         xmlns:views="//parcels/pkitest/views"
         itemClass="pkitest.PKITest.PKITestViewParcel">
