Found another schema error (thanks to repository.check()), and I'm now adding a call to repository.check() into the "TestAllParcels" unit test so we will find these errors quickly.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2740 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/parcels/osaf/examples/stockquote/views/parcel.xml
+++ b/chandler/parcels/osaf/examples/stockquote/views/parcel.xml
@@ -21,7 +21,9 @@
     <isShown>True</isShown>
     <size>0,0</size>
     <minimumSize>0,0</minimumSize>
+    <!-- This is no longer an attribute of BoxContainer
     <blockEvents itemref="views:GetQuoteEvent"/>
+    -->
 
     <blocks:BoxContainer itsName="layout">
       <childrenBlocks itemref="views:StockQuoteView/GetQuoteButton"/>
