- Refactored List, ListTree, and Table elementDelagates
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2742 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/crypto/tests/parcels/pkitest/views/parcel.xml
+++ b/chandler/crypto/tests/parcels/pkitest/views/parcel.xml
@@ -202,11 +202,11 @@
 
       <hideRoot>False</hideRoot>
       <noLines>False</noLines>
-      <columnHeadings>Item Name</columnHeadings>
-      <columnHeadings>Display Name</columnHeadings>
-      <columnHeadings>Kind</columnHeadings>
-      <columnHeadings>UUID</columnHeadings>
-      <columnHeadings>Path</columnHeadings>    
+      <columnData>Item Name</columnData>
+      <columnData>Display Name</columnData>
+      <columnData>Kind</columnData>
+      <columnData>UUID</columnData>
+      <columnData>Path</columnData>    
       <columnWidths>160</columnWidths>
       <columnWidths>110</columnWidths>
       <columnWidths>70</columnWidths>
