Removed all the old "describes=" xml attributes
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4109 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/parcels/osaf/views/parcel.xml
+++ b/chandler/parcels/osaf/views/parcel.xml
@@ -5,12 +5,4 @@
 <!-- Copyright (c) 2003-2004 Open Source Applications Foundation -->
 <!-- License: http://osafoundation.org/Chandler_0.1_license_terms.htm -->
 
-<Parcel describes="//parcels/osaf/views"
-        itsName="views"
-        xmlns="http://osafoundation.org/parcels/core">
-
-  <description>Chandler views</description>
-  <version>0.3</version>
-  <author>Open Source Applications Foundation</author>
-
-</Parcel>
+<Parcel itsName="views" xmlns="http://osafoundation.org/parcels/core" />
