More tweaks to repo servlet display -- if an anonymous item, show the UUID and displayName
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4183 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/parcels/osaf/framework/webserver/servers/maindocs/site.css
+++ b/chandler/parcels/osaf/framework/webserver/servers/maindocs/site.css
@@ -51,8 +51,8 @@ td
 .subheader
 {
     font-size: small;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 5px;
+    padding-bottom: 5x;
 }
 
 .footer
