Added "Render block tree" feature to repository servlet
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4319 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/parcels/osaf/framework/webserver/servers/maindocs/site.css
+++ b/chandler/parcels/osaf/framework/webserver/servers/maindocs/site.css
@@ -136,3 +136,31 @@ A:hover
     text-decoration: underline;
 }
 
+table.childlessblock
+{
+    border: 1px solid #bbb;
+    padding: 2px;
+    margin: 0px;
+}
+
+table.block
+{
+    border: 1px solid #333;
+    padding: 2px;
+    margin: 0px;
+}
+
+tr.block
+{
+    border: 0px;
+    padding: 0px;
+    margin: 0px;
+}
+
+td.block
+{
+    border: 0px;
+    padding: 1px;
+    margin: 0px;
+}
+
